--- a/Main.ui
+++ b/Main.ui
@@ -16,6 +16,9 @@
   <property name="statusTip">
    <string/>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(255, 255, 255);</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QTreeWidget" name="treeWidget">
     <property name="geometry">
@@ -23,8 +26,11 @@
       <x>0</x>
       <y>0</y>
       <width>400</width>
-      <height>500</height>
+      <height>471</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 255, 255);</string>
     </property>
     <attribute name="headerVisible">
      <bool>false</bool>
@@ -34,106 +40,42 @@
       <string/>
      </property>
     </column>
-    <item>
-     <property name="text">
-      <string>1</string>
-     </property>
-     <item>
-      <property name="text">
-       <string>1.1</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>1.2</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>1.3</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>1.4</string>
-      </property>
-     </item>
-    </item>
-    <item>
-     <property name="text">
-      <string>2</string>
-     </property>
-     <item>
-      <property name="text">
-       <string>2.1</string>
-      </property>
-      <item>
-       <property name="text">
-        <string>2.1.1</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>2.1.2</string>
-       </property>
-      </item>
-     </item>
-     <item>
-      <property name="text">
-       <string>2.2</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>2.3</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>2.4</string>
-      </property>
-     </item>
-    </item>
-    <item>
-     <property name="text">
-      <string>3</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>4</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>5</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>6</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>7</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>8</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>9</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>0</string>
-     </property>
-    </item>
+   </widget>
+   <widget class="QCheckBox" name="checkBox">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>476</y>
+      <width>51</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>370</x>
+      <y>476</y>
+      <width>20</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset>
+      <normaloff>Images/folder.png</normaloff>Images/folder.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>16</width>
+      <height>16</height>
+     </size>
+    </property>
    </widget>
   </widget>
  </widget>
